--- a/app/Resources/views/default/postepowanieSpadkoweForm.html.twig
+++ b/app/Resources/views/default/postepowanieSpadkoweForm.html.twig
@@ -18,7 +18,13 @@
         <td>{{ form_widget(form.numerDowodu,{attr:{class:'form-control form-control-sm licz id-validate'}}) }}</td>
         <td>{{ form_widget(form.dataWaznosciDowodu) }}</td>
         <td>{{ form_widget(form.stopienPokrewienstwa,{attr:{class:'form-control form-control-sm licz sprawdzCzyZona'}}) }}</td>
-        <td class="numerAktuUrodzenia">{{ form_widget(form.numerSkroconegoAktuUrodzeniaPotomka,{attr:{class:'form-control form-control-sm licz'}}) }}</td>
+        <td class="numerAktuUrodzenia">
+            <div class="checkbox-div-custom">
+                <div class="checkbox-custom checkbox-primary">
+                    {{ form_widget(form.stawajacy,{attr:{class:'form-control form-control-sm'}}) }}
+                    <label></label>
+                </div>
+            </div></td>
         <td>{{ form_widget(form.typDziedziczenia,{attr:{class:'form-control form-control-sm licz'}}) }}</td>
         <td>{{ form_widget(form.udzialSpadku,{attr:{class:'form-control form-control-sm'}}) }}</td>
         <td>
@@ -42,6 +48,19 @@
 
 {% endblock %}
 
+{% block _postepowanie_spadkowe_aktyStanuCywilnego_entry_widget %}
+
+    <tr class="collection-element-akt">
+        <td class="c-lp valgin-middle" style="display: none;">1.</td>
+        <td>{{ form_widget(form.nazwa,{attr:{class:'form-control form-control-sm', 'disabled':'disabled'}}) }}</td>
+        <td>{{ form_widget(form.dataWydania,{attr:{class:'form-control form-control-sm'}}) }}</td>
+        <td>{{ form_widget(form.urzad,{attr:{class:'form-control form-control-sm'}}) }}</td>
+        <td>{{ form_widget(form.numer,{attr:{class:'form-control form-control-sm'}}) }}</td>
+        {{ form_widget(form.typ,{attr:{class:'form-control form-control-sm'}}) }}
+    </tr>
+
+{% endblock %}
+
 {% block body %}
     <div id="wrapper">
         <div id="container">
@@ -54,7 +73,7 @@
                 {{ form_row(form.dataWydaniaAktuZgonu) }}
                 {{ form_row(form.numerAktuZgonu) }}
             <div class="form-group row">
-                <label class="col-xs-12 col-md-4 form-control-label form-control-sm col-sm-2 control-label">Spadkodawca: </label>
+                <label class="col-xs-12 col-md-4 form-control-label form-control-sm col-sm-2 control-label" style="text-align: left;">Spadkodawca: </label>
                 <table class="table table-bordered">
                     <thead>
                     <tr class="collection-add text-center">
@@ -89,13 +108,13 @@
                         {{ form_widget(form.zgoniarz.typDziedziczenia,{attr:{class:'form-control form-control-sm zgoniarzUkryj'}}) }}
                         {{ form_widget(form.zgoniarz.stawajacy,{attr:{class:'form-control form-control-sm zgoniarzUkryj'}}) }}
                         {{ form_widget(form.zgoniarz.udzialSpadku,{attr:{class:'form-control form-control-sm zgoniarzUkryj'}}) }}
-                        {{ form_widget(form.zgoniarz.numerSkroconegoAktuUrodzeniaPotomka,{attr:{class:'form-control form-control-sm zgoniarzUkryj'}}) }}
+                        {{ form_widget(form.zgoniarz.zamezna,{attr:{class:'form-control form-control-sm zgoniarzUkryj'}}) }}
                     </tr>
                     </tbody>
                 </table>
             </div>
             <div class="form-group row">
-                <label class="col-xs-12 col-md-4 form-control-label form-control-sm col-sm-2 control-label">Spadkobiercy: </label>
+                <label class="col-xs-12 col-md-4 form-control-label form-control-sm col-sm-2 control-label" style="text-align: left;">Spadkobiercy: </label>
                 <table class="table table-bordered">
                     <thead>
                         <tr class="collection-add text-center">
@@ -110,7 +129,7 @@
                             <th width="100">Numer dowodu osobistego</th>
                             <th width="125">Data ważności dowodu osobistego</th>
                             <th	width="100" >Pokrewieństwo</th>
-                            <th	width="100" class="numerAktuUrodzeniaTd">Numer skróconego aktu urodzenia</th>
+                            <th	width="100" class="numerAktuUrodzeniaTd">Zamężna</th>
                             <th	width="100" >Typ</th>
                             <th	width="100" >Udział</th>
                             <th	width="100" >Stawający</th>
@@ -126,7 +145,6 @@
                         </tr>
                     </tbody>
                 </table>
-                <button id="generujDrzewo" class="btn btn-primary" type="button">Generuj drzewo</button>
             </div>
 {#            <div id="myDiagramDiv" style="background-color: #696969; border: solid 1px black; height: 500px"></div>#}
 {#            <div>#}
@@ -160,14 +178,36 @@
 {#    </textarea>#}
                 {#{{ form_row(form.spadkobiercy) }}#}
                 {#{{ form_row(form.stawajacy) }}#}
-
-                <div class="akt_malzenstwa" style="display: none;">
-                    {{ form_row(form.numerSkroconegoAktuMalzenstwaMalzonka) }}
-                </div>
+            <div class="form-group row">
+                <label class="col-xs-12 col-md-4 form-control-label form-control-sm col-sm-2 control-label" style="text-align: left;">Akty stanu cywilnego: </label>
+                <table class="table table-akty table-bordered">
+                    <thead>
+                        <tr class="collection-add-akty text-center">
+                            <th width="150">Nazwa</th>
+                            <th width="150">Data wydania aktu</th>
+                            <th width="150">Urząd</th>
+                            <th width="150">Numer aktu</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tbody class="collection-akty" data-prototype="{{ form_widget(form.aktyStanuCywilnego.vars.prototype)|e }}" data-prototype-name="__name__">
+                            {% for pozycja in form.aktyStanuCywilnego %}
+                                {{ form_widget(pozycja) }}
+                            {% endfor %}
+                            <tr class="collection-add-akty" style="display: none;">
+                                <td colspan="15"><a class="dodaj-element btn btn-default btn-sm"><i class="icon md-plus" aria-hidden="true"></i>Dodaj pozycję</a></td>
+                            </tr>
+                        </tbody>
+                    </tbody>
+                </table>
+            </div>
+            <div class="akt_malzenstwa" style="display: none;">
+                {{ form_row(form.numerSkroconegoAktuMalzenstwaMalzonka) }}
+            </div>
 
 {#                {{ form_row(form.numerSkroconegoAktuMalzenstwaPotomka) }}#}
                 {#{{ form_row(form.spadkobiercy) }}#}
-
+            <button id="generujDrzewo" class="btn btn-primary" type="button">Generuj drzewo</button>
             <button class="btn btn-primary pull-right" style="float: right; margin-left: 25px;" type="submit">Generuj</button>
             <button class="btn btn-primary pull-right uzupelnijTestowo" style="float: right;" type="button">Uzupełnij danymi</button>
             {{ form_end(form) }}
@@ -233,8 +273,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary zapiszAdres">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Anuluj</button>
+                    <button type="button" class="btn btn-primary zapiszAdres">Zapisz</button>
                 </div>
             </div>
         </div>
@@ -253,6 +293,9 @@
     <script>
         $(document).ready(function() {
             addTagForm($('.collection'));
+            // addTagFormAkty($('.collection-akty'), 1, "TWOJA STARA ROBI SALTO");
+            // addTagFormAkty($('.collection-akty'), 1, "TWOJA STARA ROBI SALTO 2");
+
 
             // initDiagram();
 
