--- a/app/Resources/views/default/sprawa.html.twig
+++ b/app/Resources/views/default/sprawa.html.twig
@@ -17,7 +17,7 @@
     <div id="wrapper">
         <div id="container">
             <div id="welcome" class="col-md-12">
-                <h1><span>Welcome to</span> INZYNIERKA </h1>
+                <h1>Lista spraw</h1>
             </div>
             <div class="col-md-12" style="padding: 30px;">
                 <div class="col-md-3">
