--- a/app/Resources/views/default/ustawienia.html.twig
+++ b/app/Resources/views/default/ustawienia.html.twig
@@ -8,7 +8,7 @@
     <div id="wrapper">
         <div id="container">
             <div id="welcome">
-                <h1><span>Welcome to</span> INZYNIERKA </h1>
+                <h1>Ustawienia</h1>
             </div>
 
             {{ form_start(form) }}
