--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -178,8 +178,8 @@
         <i class="icon md-more" aria-hidden="true"></i>
       </button>
       <div class="navbar-brand navbar-brand-center site-gridmenu-toggle" data-toggle="gridmenu">
-        <img class="navbar-brand-logo" src="{{ asset('assets/img/skryba.jpg') }}" title="Skryba">
-        <span class="navbar-brand-text hidden-xs-down"> Skryba</span>
+{#        <img class="navbar-brand-logo" src="{{ asset('assets/img/skryba.jpg') }}" title="Skryba">#}
+        <span class="navbar-brand-text hidden-xs-down" style="font-family: 'Josefin Sans', sans-serif; letter-spacing: 1px; line-height: 1.1; font-size: 28px;"> Skryba</span>
       </div>
       <button type="button" class="navbar-toggler collapsed" data-target="#site-navbar-search"
       data-toggle="collapse">
