--- a/app/Resources/views/default/listaSpraw.html.twig
+++ b/app/Resources/views/default/listaSpraw.html.twig
@@ -19,7 +19,7 @@
     <div id="wrapper">
         <div id="container">
             <div id="welcome">
-                <h1><span>Welcome to</span> INZYNIERKA </h1>
+                <h1>Lista spraw</h1>
             </div>
             <table class="table table-hover dataTable table-striped w-full" id="lista">
                 <thead>
